# behavior

./: .gitignore  README.md  Task3.ipynb  behavior-v2-guppies.ipynb  behavior-v2.ipynb  behavior-v3.ipynb  dataset.py  debug_helper.py  features.py  pyproject.toml
dev-prev/.ipynb_checkpoints/: Behavior Decomposition-social+ego-checkpoint.ipynb
feature_library/: feature_template__global.py  feature_template__per_sequence.py  ffgroups.py  ffgroups_metrics.py  speed_angvel.py
notebooks/: calms21-template.ipynb
src/behavior/: __init__.py  analysis.py  dataset.py  features.py  helpers.py  models_behavior.py  visualization.py
src/behavior.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/behavior/feature_library/: __init__.py  body_scale.py  feature_template__global.py  ffgroups.py  ffgroups_metrics.py  global_kmeans.py  global_tsne.py  global_ward.py  helpers.py  id_tag_columns.py  model_predict.py  nearestneighbor.py  nn_delta_bins.py  nn_delta_response.py  orientation_relative.py  pair_egocentric.py  pair_position.py  pair_wavelet.py  pairposedistancepca.py  speed_angvel.py  temporal_stacking.py  viz_global_colored.py  ward_assign.py
src/behavior/label_library/: README.md  __init__.py  boris_aggregated_csv.py  boris_behavior.py.example  boris_pandas_pickle.py  calms21_behavior.py  custom_label_template.py  label_converter_template.py
src/behavior/model_library/: __init__.py  behavior_xgboost.py  helpers.py
