[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavior"
version = "0.1.0"
description = "Feature extraction and analysis utilities for behavior datasets."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ecodylic Science" }]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "pyarrow>=11.0",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "seaborn>=0.12",
    "matplotlib>=3.7",
    "openTSNE>=0.6",
    "opencv-python>=4.7",
    "imbalanced-learn>=0.11",
    "xgboost>=1.7",
]

[project.optional-dependencies]
wavelets = ["PyWavelets>=1.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
